--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/egee-irl/jumper#readme",
   "dependencies": {
     "electron": "^9.4.0",
-    "http-server": "^0.12.3"
+    "http-server": "^0.12.3",
+    "smartcontroller": "^1.0.1"
   }
 }
